--- a/site1.html
+++ b/site1.html
@@ -96,7 +96,7 @@
         // Add a click event listener to the main button
         actionButton.addEventListener('click', () => {
             if (step === 3) {
-                const audio = new Audio('sound/get-out.mp3');
+                const audio = new Audio('static/sound/get-out.mp3');
                 audio.play();
 
             } else {
